# simple-rsync

./: .gitignore  Cargo.toml  README.md  cli.py  requirements-dev.txt  setup.py  tests.py
mac/: README.md  mac-universal2-env.sh
mac/librsync-sys/: build.rs
package/simple_rsync/: __init__.py
src/: lib.rs
windows/: CMakeLists.txt.diff  README.md
windows/librsync-sys/: Cargo.toml
