[package]
name = "simple-rsync"
version = "1.0.1"
authors = ["Yavor Atov <yavor.atov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_rsync"
crate-type = ["cdylib"]

[dependencies]
librsync = "0.2.1"
# or librsync = { path = "../librsync-rs" }

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]
